[tool.poetry]
name = "code-switching"
version = "0.1.0"
description = ""
authors = ["Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "code_switching"}]

[tool.poetry.dependencies]
python = "^3.10.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
cython = "^3.0.4"
transformers = "^4.34.1"
pydantic = "^2.4.2"
typer = "^0.9.0"
sqlalchemy = "^2.0.22"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ipython = "^8.16.1"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
